# Practica2MH

./: CMakeLists.txt  main.cpp
comun/: Problem.cpp  Problem.h  Solution.cpp  Solution.h  Solution_enteros.cpp  Solution_enteros.h  bl.cpp  bl.h
resultados/: AGE-posicion.csv  AGE-uniforme.csv  AGG-posicion.csv  AGG-uniforme.csv  AM-10-1.csv  Exportar.csv  Tabla Completa.xlsx  Tabla Práctica 2.xlsx  bl.csv  cruce1.csv  cruce2.csv  dist0-6.csv  distcruce2.csv  distpares.csv  greedy.csv  matriz_n.csv  matriz_s.csv  matrizresultante.csv  mutaciondist.csv  mutado.csv  otra1-8.csv  sinmutar.csv  una0-6.csv
src/: AGE-posicion.cpp  AGE-uniforme.cpp  AGG-posicion.cpp  AGG-uniforme.cpp  AM-10-0.1.cpp  AM-10-0.1mej.cpp  AM-10-1.cpp  bl.cpp  greedy.cpp  pruebas.cpp
